[package]
name = "wroustr"
version = "0.3.3"
edition = "2024"
description = "Easy WebSocket routing for servers and clients"
license = "MIT"
readme = "README.md"

[features]
default = ["client", "server"]
server = []
client = []

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = {version = "0.28.0", features = ["native-tls"]}
futures-util = "0.3.31"
uuid = { version = "1.19.0", features = ["v4"] }